--- a/spezi_app_mobile/android/settings.gradle
+++ b/spezi_app_mobile/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'spezi_app_mobile'
+include ':react-native-notifications'
+project(':react-native-notifications').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-notifications/lib/android/app')
 include ':@react-native-async-storage_async-storage'
 project(':@react-native-async-storage_async-storage').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-async-storage/async-storage/android')
 include ':react-native-vector-icons'
