--- a/spezi_app_mobile/package.json
+++ b/spezi_app_mobile/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-maps": "^0.27.1",
     "react-native-material-ui": "^1.30.1",
+    "react-native-notifications": "^3.4.1",
     "react-native-paper": "^4.5.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
